@@ -1,6 +1,7 @@
 2011-12-14  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #7066: IE embeeded media player display
+	* Added feature #32567: Use HTML5 audio tag when available
 
 2011-12-13  Stanislas Rolland  <typo3@sjbr.ca>
 
